# solar-rs

./: .gitignore  Cargo.toml  README.md  data.zip.txt  out.csv
.devcontainer/: devcontainer.json
data2/: 2023-05.csv
excel/: Brierton-Detailed Data-20230523 (2).xlsx  Brierton-Detailed Data-20230523 (3).xlsx  Brierton-Detailed Data-20230523 (4).xlsx  Brierton-Detailed Data-20230523 (5).xlsx
lib/parsers/: Cargo.toml
lib/parsers/src/: csv.rs  excel.rs  lib.rs  mod.rs
src/: aggregate_solar_record.rs  formatting.rs  lib.rs  main.rs  parse.rs  period.rs  rate.rs  rate_version.rs  serialization.rs  solar_data.rs  solar_record.rs  solarman_record.rs  units.rs
src/parsers/: csv.rs  excel.rs  mod.rs
