[package]
name = "solar-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] } 
chrono-tz = "0.8.2"
csv = "1.2.1"
num-traits = "0.2.15"
serde = { version = "1.0.163", features = ["derive"] }
